
\name{NEWS}
\title{NEWS file for the variables package}

\section{Changes in Version 1.1-0 (2021-03-08)}{
  \itemize{
    \item{Add a flag to \code{ordered_var} requesting a sparse
          model matrix.}
  }
}

\section{Changes in Version 1.0-3 (2020-02-13)}{
  \itemize{
    \item{Update citation info.}
  }
}

\section{Changes in Version 1.0-2 (2019-06-20)}{
  \itemize{
    \item{Allow for censoring in factors.}
  }
}

\section{Changes in Version 1.0-1 (2018-08-17)}{
  \itemize{
    \item{Documentation update.}
  }
}


\section{Changes in Version 1.0-0 (2018-03-07)}{
  \itemize{
    \item{A paper describing version 1.0-0 of the \pkg{mlt}, \pkg{basefun}, and
          \pkg{variables} packages was accepted for publication in the Journal of
          Statistical Software 2018-03-05.}
    \item{Documentation updates.}
  }
}


\section{Changes in Version 0.0-31 (2018-02-23)}{
  \itemize{
    \item{Fix date and add ORCID number.}
  }
}

\section{Changes in Version 0.0-30 (2016-02-19)}{
  \itemize{
    \item{The \pkg{variables} package was first 
          published on CRAN.}
  }
}
