@@ -1,7 +1,7 @@
 Package: variables
 Title: Variable Descriptions
-Version: 1.1-0
-Date: 2021-03-08
+Version: 1.1-1
+Date: 2021-06-17
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
 Description: Abstract descriptions of (yet) unobserved variables.
