@@ -1,6 +1,6 @@
 
-R version 3.2.2 (2015-08-14) -- "Fire Safety"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 4.1.0 (2021-05-18) -- "Camp Pontanezen"
+Copyright (C) 2021 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -44,6 +44,39 @@ $d_vari
 > as.data.frame(x1)
   d_vari
 1    1.5
+> 
+> x1 <- numeric_var("d_vari", "double", "cm", support = c(0.0, 1.5), add = c(-1, 1))
+> variable.names(x1)
+[1] "d_vari"
+> desc(x1)
+[1] "double"
+> unit(x1)
+[1] "cm"
+> support(x1)
+$d_vari
+[1] 0.0 1.5
+
+> levels(x1)
+[1] NA
+> bounds(x1)
+$d_vari
+[1] -Inf  Inf
+
+> is.bounded(x1)
+[1] FALSE
+> mkgrid(x1)
+$d_vari
+[1] -1.0  2.5
+
+> mkgrid(x1, add = FALSE)
+$d_vari
+[1] 0.0 1.5
+
+> as.data.frame(x1)
+  d_vari
+1    3.5
+> 
+> 
 > 
 > x2 <- numeric_var("i_vari", "integer", "cm", support = 1:10)
 > variable.names(x2)
@@ -250,7 +283,7 @@ $f_vari
   FALSE    TRUE    TRUE    TRUE    TRUE    TRUE 
 > mkgrid(xy, n = 3)
 $d_vari
-[1] 0.00 0.75 1.50
+[1] -1.00  0.75  2.50
 
 $i_vari
  [1]  1  2  3  4  5  6  7  8  9 10
@@ -278,4 +311,4 @@ Levels: A B C
 > 
 > proc.time()
    user  system elapsed 
-  0.134   0.018   0.140 
+  0.150   0.038   0.171 
